# 2DEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/core/: Application.cpp  Application.h  Debug.cpp  Debug.h  State.h  StateMachine.cpp  StateMachine.h  Time.cpp  Time.h
src/input/: Input.cpp  Input.h
